03-jenkins-deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deploy
  namespace: jenkins
spec:
  selector:
    matchLabels:
      dev: repl

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate

  template:
    metadata:
      labels:
        dev: repl

    spec:
      containers:
        - name: jenkins-container
          image: jenkins:2.60.3-alpine
          ports:
            - containerPort: 8080

          volumeMounts:
          - name: jenkins-data
            mountPath: /var/jenkins_home

      volumes:
      - name: jenkins-data
        persistentVolumeClaim:
          claimName: jenkins-pvc
