03-jenkins-deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  labels:
    owner: yk

spec:
  type: ClusterIP
  ports:
  - port: 88
    targetPort: 8080
    name: http
  selector:
    dev: repl
