03-jenkins-deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: jenkins-issuer
spec:
  tls:
    - hosts:
      - jenkins.terop-kuber.com
      secretName: jenkins-tls

  rules:
    - host: "jenkins.terop-kuber.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  name: http
